Fix status button height so single line transaction view is more compact. Fix color of status cell in transaction view. Fix background of Report search bar. Fix background & color of of report expandall button.

--- a/Source/WPF/MyMoney/Themes/Dark.xaml
+++ b/Source/WPF/MyMoney/Themes/Dark.xaml
@@ -32,4 +32,7 @@
     <SolidColorBrush x:Key="PositiveCurrencyForegroundBrush" Color="#99FFFFFF"/>
     <SolidColorBrush x:Key="NegativeCurrencyForegroundBrush" Color="Firebrick"/>
 
+    <!-- The following are used in toolbar icons -->
+    <SolidColorBrush x:Key="ToolbarIconBrush" Color="#1C3B91"/>
+    
 </ResourceDictionary>
