--- a/Source/WPF/MyMoney/Themes/generic.xaml
+++ b/Source/WPF/MyMoney/Themes/generic.xaml
@@ -23,9 +23,6 @@
     <SolidColorBrush x:Key="FlyoutBorderThemeBrush" Color="Black"/>
     <SolidColorBrush x:Key="FlyoutBackgroundThemeBrush" Color="#F6F4F2"/>
 
-    <!-- for hyperlinks in reports -->
-    <SolidColorBrush x:Key="HyperlinkForeground" Color="SlateBlue"/>
-
     <!-- CloseBox -->
     <SolidColorBrush x:Key="CloseBoxNormalBackground" Color="Gray"/>
     <SolidColorBrush x:Key="CloseBoxNormalForeground" Color="White"/>
@@ -574,7 +571,7 @@
             <DrawingGroup >
                 <GeometryDrawing Brush="Transparent" >
                     <GeometryDrawing.Pen>
-                        <Pen Brush="{StaticResource ToolbarIconBrush}" Thickness="1" EndLineCap="Round" StartLineCap="Round" LineJoin="Round" />
+                        <Pen Brush="{DynamicResource ToolbarIconBrush}" Thickness="1" EndLineCap="Round" StartLineCap="Round" LineJoin="Round" />
                     </GeometryDrawing.Pen>
                     <GeometryDrawing.Geometry>
                         <PathGeometry>
@@ -875,8 +872,6 @@
 
     <SolidColorBrush x:Key="GlyphBrush" Color="#CED4DD"/>
     <SolidColorBrush x:Key="ReportTableBorder" Color="#FF8586A9"/>
-    <SolidColorBrush x:Key="ReportHeaderBackground" Color="#FFC2D4DA"/>
-    <SolidColorBrush x:Key="ReportHeaderForeground" Color="Black"/>
     <LinearGradientBrush x:Key="ToolBarHorizontalBackground" EndPoint="0,1" StartPoint="0,0">
         <GradientStop Color="#FFFFFF" Offset="0"/>
         <GradientStop Color="#FFFBFF" Offset="0.5"/>
@@ -1070,4 +1065,68 @@
         <Setter Property="SelectionMode" Value="Single"/>
     </Style>
 
+
+    <Style x:Key="NuclearTreeViewItemToggleButton" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Grid Width="16" Height="16" Background="Transparent">
+                        <Path HorizontalAlignment="Left" Margin="1,1,1,1" x:Name="ExpandPath" VerticalAlignment="Center" Data="M 4 1 L 12 8 L 4 15 Z"
+                              >
+                            <Path.Fill>
+                                <SolidColorBrush x:Name="ArrowBrush" Color="{DynamicResource TriangleExpanderIconColor}"/>
+                            </Path.Fill>
+                            <Path.RenderTransform>
+                                <RotateTransform x:Name="ArrowRotation" CenterX="8" CenterY="8"/>
+                            </Path.RenderTransform>
+                        </Path>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="Color"
+                                          Storyboard.TargetName="ArrowBrush">
+                                            <EasingColorKeyFrame KeyTime="0"
+                                                  Value="{DynamicResource TriangleExpanderIconMouseOverColor}" />
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed" >
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="Color"
+                                          Storyboard.TargetName="ArrowBrush">
+                                            <EasingColorKeyFrame KeyTime="0"
+                                                  Value="{DynamicResource TriangleExpanderIconPressedColor}" />
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard></VisualState>
+                            </VisualStateGroup>
+                            <VisualStateGroup x:Name="CheckStates">
+                                <VisualState x:Name="Checked">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:0.5" To="90" Storyboard.TargetProperty="Angle"
+                                                         Storyboard.TargetName="ArrowRotation"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Unchecked">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:0.5" To="0" Storyboard.TargetProperty="Angle"
+                                                         Storyboard.TargetName="ArrowRotation"/>
+                                    </Storyboard></VisualState>
+                                <VisualState x:Name="Indeterminate" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                    <!--<ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter Property="Visibility" Value="Visible" TargetName="IsExpandedPath"/>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="ExpandPath"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>-->
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
 </ResourceDictionary>
