--- a/Source/WPF/MyMoney/Themes/Dark.xaml
+++ b/Source/WPF/MyMoney/Themes/Dark.xaml
@@ -41,10 +41,10 @@
     <!-- The row headers and footers -->
     <SolidColorBrush x:Key="ReportHeaderBackground" Color="#33FFFFFF"/>
     <SolidColorBrush x:Key="ReportHeaderForeground" Color="white"/>
-    <SolidColorBrush x:Key="ReportHeadingForeground" Color="{m:DynamicColor SystemAccentColorDark1}"/>
-    <SolidColorBrush x:Key="ReportSubHeadingForeground" Color="{m:DynamicColor SystemAccentColorDark2}"/>
+    <SolidColorBrush x:Key="ReportHeadingForeground" Color="{m:DynamicColor SystemAccentColorLight1}"/>
+    <SolidColorBrush x:Key="ReportSubHeadingForeground" Color="{m:DynamicColor SystemAccentColorLight1}"/>
     <Color x:Key="TriangleExpanderIconColor">#33FFFFFF</Color>
-    <Color x:Key="TriangleExpanderIconMouseOverColor">#1C3B91</Color>
+    <Color x:Key="TriangleExpanderIconMouseOverColor">#00A7FF</Color>
     <Color x:Key="TriangleExpanderIconPressedColor">#00A7FF</Color>
     
 
