--- a/Source/WPF/MyMoney/Themes/generic.xaml
+++ b/Source/WPF/MyMoney/Themes/generic.xaml
@@ -404,18 +404,6 @@
 
     <views:ZeroToBrushConverter x:Key="ZeroToBrushConverter" />
 
-    <Style x:Key="HistoryBackForward" TargetType="{x:Type GroupBox}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type GroupBox}">
-                    <Canvas x:Name="HistoryButtons">
-
-                    </Canvas>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
     <Style x:Key="RentalChartExpenseDistribution" TargetType="{x:Type Border}">
         <Setter Property="CornerRadius" Value="0"/>
         <Setter Property="BorderBrush" Value="Black"/>
@@ -1071,7 +1059,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Grid Width="16" Height="16" Background="Transparent">
+                    <Grid Width="16" Height="16" Background="Transparent"
+                          local:WpfAnnotations.CodeRef="NuclearTreeViewItemToggleButton" >
                         <Path HorizontalAlignment="Left" Margin="1,1,1,1" x:Name="ExpandPath" VerticalAlignment="Center" Data="M 4 1 L 12 8 L 4 15 Z"
                               >
                             <Path.Fill>
